--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.booklisting.MainActivity">
+    android:padding="16dp">
 
     <EditText
         android:id="@+id/search_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/search_edittext_placeholder"
-        />
+        android:hint="@string/search_edittext_placeholder" />
 
     <Button
         android:id="@+id/button_search"
@@ -26,20 +19,29 @@
         android:layout_alignParentTop="true"
         android:text="@string/search" />
 
-    <ListView android:paddingTop="@dimen/activity_vertical_margin"
+    <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/search_edit_text"
         android:drawSelectorOnTop="true"
         android:orientation="vertical"
-        tools:context="com.example.android.booklisting.MainActivity"
-        android:layout_below="@+id/search_edit_text" />
+        android:paddingTop="@dimen/activity_vertical_margin" />
 
     <TextView
         android:id="@+id/empty_view"
-        android:layout_width="match_parent"
+        android:text="@string/default_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/search_edit_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerInParent="true" />
+
+    <ProgressBar
+        android:id="@+id/loading_indicator"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
 </RelativeLayout>
